refactor(service): simplify filter logic and remove unused code
Refactored filter logic in multiple service implementations to use concise expressions. Removed unused code and commented-out sections in UsuarioServiceImpl to improve code readability and maintainability.